# scheme_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-compose.yml.example  main.py  pyproject.toml
backend/: .env.example  .env.example.py  app.py  check.py  database.py  main.py
backend/app/: router.py
backend/app/agent/api/: router.py
backend/app/agent/crud/: crud_agent.py  crud_agent_meta.py
backend/app/agent/model/: agent.py  agent_meta.py
backend/app/agent/schema/: agent.py  agent_meta.py
backend/app/agent/service/: agent_meta_service.py  agent_service.py
backend/app/agent/services/: agent_service.py
backend/app/deduction/model/: deduction_plan.py  task_log.py  task_status.py
backend/app/deduction/schema/: deduction_plan.py  task_log.py  task_status.py
backend/app/env/api/: router.py
backend/app/env/crud/: crud_env_instance.py  (+1 more)
backend/common/: crud.py  dataclasses.py  enum.py  enums.py  log.py  model.py  schema.py
backend/common/exception/: errors.py
backend/common/response/: response_code.py  response_schema.py
backend/common/template/: agent_scheme.py  task_scheme.py
backend/core/: conf.py  path_conf.py  registrar.py
backend/database/: db.py
backend/sql/postgres/: scheme.sql
backend/tests/: test_r2.py
backend/utils/: health_check.py  serializers.py  snowflake.py  timezone.py  upload.py
doc/: deduction_redesign_251113.md  dev.md  dev_251112.md
local/: test.py
local/agent/: QUICKSTART.md  README.md  create_test_agent.py  gradio_test.py  start.py
local/mock_engin/: engine.py
local/ui/env/: test_env_template.py
src/core/: conf.py  path_conf.py  test.py
(+16 files in other folders)
