[project]
name = "scheme-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.1",
    "gradio>=5.49.1",
    "loguru>=0.7.3",
    "msgspec>=0.19.0",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "ruff>=0.14.1",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-crud-plus>=1.13.0",
]
