[project]
name = "scheme-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi-limiter>=0.1.6",
    "fastapi-pagination>=0.15.0",
    "fastapi[standard]>=0.119.1",
    "gradio>=5.49.1",
    "loguru>=0.7.3",
    "minio>=7.2.18",
    "msgspec>=0.19.0",
    "pydantic-settings>=2.11.0",
    "requests>=2.32.5",
    "ruff>=0.14.1",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-crud-plus>=1.13.0",
    "tortoise-orm[asyncpg]>=0.25.1",
]

[tool.ruff]
line-length = 108
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]
ignore = []
exclude = [
    ".venv",
    "migrations",
    "__pycache__",
    "auxiliary",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["backend"]
known-third-party = ["numpy", "pandas", "requests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
